<resources>
    <string name="app_name" translatable="false">Inzyn</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">Exercise List</string>
    <string name="calendar_fragment_label">Calendar</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="go_to_calendar">Calendar</string>
    <string name="add_exercise">Add exercise</string>
    <string name="exercise">Exercise</string>
    <string name="name">Name</string>
    <string name="exercise_name">Name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="weight">Weight</string>
    <string name="add_set">Add set</string>
    <string name="reps">Reps</string>
    <string name="reps2">Reps:</string>
    <string name="weight2">Weight:</string>
    <string name="exercises">Exercises</string>
    <string name="go_to_plans">Go to plans</string>
    <string name="Dark">Dark</string>
    <string name="Light">Light</string>
    <string name="Language">Language</string>
    <string name="reset_database">Reset database</string>
    <string name="change_theme">Change theme</string>
    <string name="polish">Polish</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="Plans">Plans</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="set_exercise_name">Exercise name</string>
    <string name="today_s_plan">Today\'s plan</string>
    <string name="plans">Plans</string>
    <string name="Total_series">Total series done: </string>
    <string name="Exercise_stats">Exercise stats</string>
    <string name="total_training_volume">Total training volume:</string>
    <string name="avg_exercise_volume">Average volume per exercise:</string>
    <string name="fav_exercise">Favourite exercise</string>
    <string name="exercise_deleted_from_db">Exercise deleted from database</string>
    <string name="no_data">No data</string>
    <string name="Add_to_plan">Add to plan</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Stats_for_exercise">Stats for exercise:</string>
    <string name="Total_sets">Total sets:</string>
    <string name="Total_vol">Total volume:</string>
    <string name="Avg_vol">Average volume:</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="Add">Add</string>
    <string name="edit_exercise">Edit exercise</string>
    <string name="add_to_plan_or_delete">Do you want to add this to plan or delete it</string>
    <string name="delete_exercise">Delete exercise</string>
    <string name="do_you_want_to_delete">Do you want to delete </string>
    <string name="from_plan">from plan</string>
    <string name="delete_item">Delete item</string>
    <string name="sure_to_delete_series">Are you sure you want to delete the series</string>
    <string name="timer_finished">Timer finished</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>