<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.inzyn.viewmodel.AddSetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FormFragment">

        <TextView
            android:id="@+id/label_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/label_name"
            app:layout_constraintTop_toBottomOf="@+id/field_name" />

        <TextView
            android:id="@+id/field_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:minHeight="48dp"
            android:text="@{viewModel.exerciseName}"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_name"
            app:layout_constraintTop_toBottomOf="@+id/label_name" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/exercise_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> viewModel.onSave()}"
            android:text="@{viewModel.buttonText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Dodaj" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <EditText
            android:id="@+id/field_description"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={viewModel.description}"
            app:layout_constraintEnd_toEndOf="@+id/field_name"
            app:layout_constraintStart_toStartOf="@+id/label_name"
            app:layout_constraintTop_toBottomOf="@+id/label_description" />

        <TextView
            android:id="@+id/label_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/weight"
            app:layout_constraintStart_toStartOf="@+id/field_description"
            app:layout_constraintTop_toBottomOf="@+id/field_description" />

        <EditText
            android:id="@+id/field_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="@={viewModel.weight}"
            app:layout_constraintStart_toStartOf="@+id/label_weight"
            app:layout_constraintTop_toBottomOf="@+id/label_weight" />

        <TextView
            android:id="@+id/label_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reps"
            app:layout_constraintStart_toStartOf="@+id/field_weight"
            app:layout_constraintTop_toBottomOf="@+id/field_weight" />

        <EditText
            android:id="@+id/field_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:text="@={viewModel.reps}"
            app:layout_constraintStart_toStartOf="@+id/label_reps"
            app:layout_constraintTop_toBottomOf="@+id/label_reps" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
